intl/unicharutil/util/nsUnicodeProperties.h
@@ -64,8 +64,11 @@ const uint32_t kEmojiSkinToneLast = 0x1f3ff;
 
 extern const hb_unicode_general_category_t sICUtoHBcategory[];
 
+// NOTE: This returns values matching harfbuzz HB_UNICODE_GENERAL_CATEGORY_*
+// constants, NOT the mozilla::intl::GeneralCategory enum.
+// For the GeneralCategory enum, use intl::UnicodeProperties::CharType itself.
 inline uint8_t GetGeneralCategory(uint32_t aCh) {
-  return sICUtoHBcategory[intl::UnicodeProperties::CharType(aCh)];
+  return sICUtoHBcategory[unsigned(intl::UnicodeProperties::CharType(aCh))];
 }
 
 inline int8_t GetNumericValue(uint32_t aCh) {
